# pdf2table

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/pdf2table/: __init__.py  fitz2miner.py  grid.py  municipal_appraisals.py  plumber2miner.py  preprocess.py
src/pdf2table.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test_data/: tesseract_data.parquet  tesseract_data2.parquet  test_values.csv
tests/: test_fitz2miner.py  test_grid.py  test_municipal_appraisals.py  test_plumber2miner.py  test_preprocess.py
