[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2table"
version = "0.0.1"
description = "A package for extracting a single table from a single page in a pdf into pandas DataFrame"
authors = [{name = "Martin Hunting", email = "martin.hunting@hotmail.com"}]
license = { text = "MIT License" } 
requires-python = ">=3.11"

dependencies = [
    "pandas","numpy", "pyarrow","pandasql"
]

[project.urls]
Homepage = "https://github.com/yourusername/my_package"
Documentation = "https://yourusername.github.io/my_package"
Source = "https://github.com/yourusername/my_package"
Tracker = "https://github.com/yourusername/my_package/issues"

[tool.setuptools]
package-dir = {"" = "src"}
package-data = { "pdf2table" = ["py.typed"] }  # This line is added to include py.typed in your package
